--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <div class="flex__item-left">
                     <p class="text-h1">Hi, I'm James Mirro & I'm a photographer.</p>
                     <p class="text-p mirro__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-                    <button class="read__more">
+                    <p class="button__read-more"><button class="read__more">
                         <p class="text-p card-p">Read more</p>
-                    </button>
+                    </button></p>
                 </div>
                 <div class="flex__item-right">
                     <img class="photo__Mirro" src="img/mirro.png" alt="Mirro">
@@ -51,7 +51,7 @@
         <div class="container">
             <p class="fill"><img src="img/Fill.svg" alt="Fill"></p>
             <p class="text-h2 text__services">Services</p>
-            <p class="text-p text__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim<br>in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor<br>interdum nulla.</p>
+            <p class="text-p text__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim<br class="br__none">in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor<br>interdum nulla.</p>
             <div class="services__grid">
                 <div class="services__grid-item">
                     <div class="background__item">
@@ -117,28 +117,22 @@
         <div class="container">
             <p class="fill__two"><img src="img/Fill.svg" alt="Fill"></p>
             <p class="text-h2 preset__store-text">Preset Store</p>
-            <p class="text-p text__description-two">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim<br>in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor<br>interdum nulla.</p>
+            <p class="text-p text__description-two">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim<br class="br__none">in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor<br>interdum nulla.</p>
             <div class="preset__store-grid">
                 <div class="preset__store-grid-item">
-                    <img class="obf" src="img/preset_store_one.jpg" alt="preset_store_one">
-                    <div class="preset__background">
+                    <img src="img/preset__one.png" alt="preset_store_one">
                         <p class="text-h3 text__h3-item">Mirro Preset Pack Vol. 03</p>
                         <p class="text-p text__p-item">The first volume is my go-to presets when shooting action sports. Just the right amount of contrast and highlights to make your photo (literally) pop!</p>
-                    </div>
                 </div>
                 <div class="preset__store-grid-item">
-                    <img class="obf" src="img/preset_store_two.jpg" alt="preset_store_two.jpg">
-                    <div class="preset__background">
+                    <img src="img/preset__png.png" alt="preset_store_two.jpg">
                         <p class="text-h3 text__h3-item">Mirro Preset Pack Vol. 03</p>
                         <p class="text-p text__p-item">Vol. 02 is dedicated solely to landscape photography. Pay attention to your exposure while out there and these presets will make your photos look great.</p>
-                    </div>
                 </div>
-                <div class="preset__store-grid-item">
-                    <img class="obf" src="img/preset_store_three.jpg" alt="preset_store_three">
-                    <div class="preset__background">
+                <div class="preset__store-grid-item лох">
+                    <img src="img/preset__three.png" alt="preset_store_three">
                     <p class="text-h3 text__h3-item">Mirro Preset Pack Vol. 03</p>
                     <p class="text-p text__p-item">These are a collection of my most used wedding presets — use with caution as you'll end up loving wedding photography.</p>
-                    </div>
                 </div>
             </div>
             <p class="preset__store-arrow" href="#!">Preset store<span class="arrow"><img src="img/arrow.png" alt="arrow"></span></p>
@@ -149,7 +143,7 @@
         <div class="small__container">
             <div class="contact__flex">
                 <div class="contact__flex-item">
-                    <p class="text-p text__contact">Wan't to work together?<br> Follow the link and let's<br> get in touch.</p>
+                    <p class="text-p text__contact">Wan't to work together?<br class="br__none"> Follow the link and let's<br class="br__none"> get in touch.</p>
                 </div>
                 <div class="right__text-btn">
                     <p class="text__contact-btn">Contact</p>
@@ -162,21 +156,21 @@
         <div class="container">
             <p class="mirro__white"><img src="img/mirro__white.png" alt="Mirro_logo-white"></p>
             <div class="input__grid">
-                <div class="input__grid-item">
+                <div class="input__grid-item-1">
                     <a href="#!"><p class="text-p title">Pages</p></a>
                     <a href="#!"><p class="text-p list">Home</p></a>
                     <a href="#!"><p class="text-p list">Store</p></a>
                     <a href="#!"><p class="text-p list">About</p></a>
                     <a href="#!"><p class="text-p list">Contact</p></a>
                 </div>
-                <div class="input__grid-item">
+                <div class="input__grid-item-2">
                     <a href="#!"><p class="text-p title">Preset packs</p></a>
                     <a href="#!"><p class="text-p list">Mirro Preset Pack Vol. 01</p></a>
                     <a href="#!"><p class="text-p list">Mirro Preset Pack Vol. 02</p></a>
                     <a href="#!"><p class="text-p list">Mirro Preset Pack Vol. 03</p></a>
                     <a href="#!"><p class="text-p list">Mirro Preset Pack Vol. 04</p></a>
                 </div>
-                <div class="input__grid-item">
+                <div class="input__grid-item-3">
                     <a href="#!"><p class="text-p title">Utility Pages</p></a>
                     <a href="#!"><p class="text-p list">Instructions</p></a>
                     <a href="#!"><p class="text-p list">Style guide</p></a>
@@ -184,7 +178,7 @@
                     <a href="#!"><p class="text-p list">Changelog</p></a>
                     <a href="#!"><p class="text-p list">404</p></a>
                 </div>
-                <div class="input__grid-item submit">
+                <div class="input__grid-item submit-4">
                     <a href="#!"><p class="text-p title">Newsletter</p></a>
                     <p class="text-p list">Subscribe to my newsletter where I share news about<br>upcoming printings and preset sales.</p>
                     <form action="#">
@@ -192,12 +186,12 @@
                         <button type="submit">Submit</button>
                       </form>
                 </div>
-                <div class="input__grid-item">
+                <div class="input__grid-item-5">
                     <a href="#!"><p class="text-p title">Store categories</p></a>
                     <a href="#!"><p class="text-p list">Presets</p></a>
                     <a href="#!"><p class="text-p list">Prints</p></a>
                 </div>
-                <div class="input__grid-item">
+                <div class="input__grid-item-6">
                     <a href="#!"><p class="text-p title">Business Areas</p></a>
                     <a href="#!"><p class="text-p list">Wedding Photography</p></a>
                     <a href="#!"><p class="text-p list">Sports Photography</p></a>
