--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-sclae=1.0, 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, 
     minimum-scale=1.0, user-scalable=0">
     <title>One Portfolio</title>
     <link rel="stylesheet" href="style.css">
@@ -50,7 +50,7 @@
 
     <section class="services">
         <div class="container">
-            <p class="fill"><img src="img/Fill.svg" alt="Fill"></p>
+            <p class="zigzag__picture"><img src="img/zigzag__picture.svg" alt="zigzag picture"></p>
             <p class="text-h2 text__services">Services</p>
             <p class="text-p text__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim<br class="br__none">in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor<br>interdum nulla.</p>
             <div class="services__grid">
@@ -116,7 +116,7 @@
 
     <section class="preset__store">
         <div class="container">
-            <p class="fill__two"><img src="img/Fill.svg" alt="Fill"></p>
+            <p class="zigzag__picture-2"><img src="img/zigzag__picture.svg" alt="zigzag__picture"></p>
             <p class="text-h2 preset__store-text">Preset Store</p>
             <p class="text-p text__description-two">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim<br class="br__none">in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor<br>interdum nulla.</p>
             <div class="preset__store-grid">
